update virtual threads